--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 main:
 - title: "About"
   url: /about/
-- title: "CV"
-  url: /cv/
+- title: "Resume"
+  url: /resume/
 - title: "Posts"
   url: /year-archive/
 - title: "Categories"
